--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "sweetalert2": "^11.10.5",
         "swiper": "^11.0.6"
     }
 }
